src/test/ui/feature-gates/feature-gate-extended_key_value_attributes.stderr
error[E0658]: arbitrary expressions in key-value attributes are unstable
  --> $DIR/feature-gate-extended_key_value_attributes.rs:2:10
   |
LL | #[attr = multi::segment::path]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #78835 <https://github.com/rust-lang/rust/issues/78835> for more information
   = help: add `#![feature(extended_key_value_attributes)]` to the crate attributes to enable

error[E0658]: arbitrary expressions in key-value attributes are unstable
  --> $DIR/feature-gate-extended_key_value_attributes.rs:3:10
   |
LL | #[attr = macro_call!()]
   |          ^^^^^^^^^^^^^
   |
   = note: see issue #78835 <https://github.com/rust-lang/rust/issues/78835> for more information
   = help: add `#![feature(extended_key_value_attributes)]` to the crate attributes to enable

error[E0658]: arbitrary expressions in key-value attributes are unstable
  --> $DIR/feature-gate-extended_key_value_attributes.rs:4:10
   |
LL | #[attr = 1 + 2]
   |          ^^^^^
   |
   = note: see issue #78835 <https://github.com/rust-lang/rust/issues/78835> for more information
   = help: add `#![feature(extended_key_value_attributes)]` to the crate attributes to enable

error[E0658]: arbitrary expressions in key-value attributes are unstable
  --> $DIR/feature-gate-extended_key_value_attributes.rs:5:10
   |
LL | #[attr = what?]
   |          ^^^^^
   |
   = note: see issue #78835 <https://github.com/rust-lang/rust/issues/78835> for more information
   = help: add `#![feature(extended_key_value_attributes)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
